fixed text box so that paragraph formatting preserved while wrapping

--- a/static/style.css
+++ b/static/style.css
@@ -42,6 +42,10 @@ nav {
 	margin-left: .5em;
 	margin-right: .5em;
 }
+pre {
+	white-space: pre-wrap;
+	word-wrap: break-word;
+}
 
 #new_title {
 	width: 80%;
